--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   
-   <link rel="stylesheet" href="app/style.css">
+  
    
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src='app/app.component.js'></script>
-    <script src='app/app.module.js'></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+     <link rel="stylesheet" href="app/sw-html/sw-html.component.css">
+     <link rel="stylesheet" href="app\people-search\people-search.component.css">
+
+      
+    
     <script src='main.js'></script>
 
 </head>
